feat: 修复m3u8请求头，支持 FFmpeg 路径引用

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "browser-stream-bridge",
   "type": "module",
   "bin": {
-    "browser-stream-bridge": "dist/index.js"
+    "browser-stream-bridge": "dist/index.mjs"
   },
   "scripts": {
     "dev": "tsx src/index.ts",
